--- a/personal_blog/blog/templates/blog/blog_post.html
+++ b/personal_blog/blog/templates/blog/blog_post.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="row">
@@ -27,7 +28,8 @@
 </div>
 
 <div class="row my-3">
-    <div class="col-md-6 col-12 mx-md-auto mx-3">
+    <div class="col-md-6 col-11 mx-md-auto mb-3 pb-2 mx-3">
+
         {% if object.likes.count == 1 %}
             <p>{{ object.likes.count }} person likes this post</p>
         {% else %}
@@ -50,6 +52,42 @@
         {% else %}
             <button class="btn btn-outline-primary" disabled><ion-icon name="heart-dislike-outline"></ion-icon> Login to like this post</button>
         {% endif %}
+        
+        <hr>
+        <h5>Comments</h5>
+        {% if request.user.is_authenticated %}
+            <h6><ion-icon name="reader-outline"></ion-icon> Leave your comment:</h6>
+            <form method="post" action="{% url 'comment_article' object.pk %}">
+                {% csrf_token %}
+                {{ comment_form|crispy}}
+                <button class="btn btn-outline-primary" type="submit">Send comment</button>
+            </form>
+        {% else %}
+            <p><strong>Login</strong> to comment this post</p>
+        {% endif %}
+
+        {% for comment in comments %}
+
+        <ul class="list-group my-3">
+            <div class="comment">
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                        <p>{{ comment.author.username }} commented:</p>
+                        <p class="ml-auto">{{ comment.date }}</p>
+                    </div>
+                    
+                    <p>{{ comment.content }}</p>
+                    {% if request.user.username == comment.author.username %}
+                        <div class="pb-3">
+                            <a href="{% url 'delete_comment' comment.pk %}">Delete comment</a>
+                        </div>
+                    {% endif %}
+                </li>
+            </div>
+        </ul>
+
+        {% endfor %}
+        
     </div>
 </div>
 {% endblock content%}
