--- a/personal_blog/blog/templates/blog/base.html
+++ b/personal_blog/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "https://bootswatch.com/5/minty/bootstrap.min.css">
     <title>Personal Blog</title>
+    {{ comment_form.media }}
 </head>
 <body>
     {% include 'blog/nav.html' %}
