--- a/personal_blog/blog/templates/blog/blog_post.html
+++ b/personal_blog/blog/templates/blog/blog_post.html
@@ -59,7 +59,9 @@
             <h6><ion-icon name="reader-outline"></ion-icon> Leave your comment:</h6>
             <form method="post" action="{% url 'comment_article' object.pk %}">
                 {% csrf_token %}
-                {{ comment_form|crispy}}
+                <ul class="list-group my-3">
+                    {{ comment_form }}
+                </ul>
                 <button class="btn btn-outline-primary" type="submit">Send comment</button>
             </form>
         {% else %}
@@ -67,7 +69,6 @@
         {% endif %}
 
         {% for comment in comments %}
-
         <ul class="list-group my-3">
             <div class="comment">
                 <li class="list-group-item">
@@ -76,7 +77,7 @@
                         <p class="ml-auto">{{ comment.date }}</p>
                     </div>
                     
-                    <p>{{ comment.content }}</p>
+                    {{ comment.content|safe }}
                     {% if request.user.username == comment.author.username %}
                         <div class="pb-3">
                             <a href="{% url 'delete_comment' comment.pk %}">Delete comment</a>
