--- a/personal_blog/blog/templates/blog/blog_post.html
+++ b/personal_blog/blog/templates/blog/blog_post.html
@@ -57,6 +57,14 @@
         <h5>Comments</h5>
         {% if request.user.is_authenticated %}
             <h6><ion-icon name="reader-outline"></ion-icon> Leave your comment:</h6>
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}"><ion-icon name="alert-circle-outline"></ion-icon>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
             <form method="post" action="{% url 'comment_article' object.pk %}">
                 {% csrf_token %}
                 <ul class="list-group my-3">
